force-app/main/default/objects/Campaing__c/Campaing__c.object-meta.xml
<CustomObject>
    <label>Campaña</label>
    <nameField>
        <label>Nombre de Campañas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campañas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>