force-app/main/default/objects/Campaing__c/fields/Alcance__c.field-meta.xml
<CustomField>
    <fullName>Alcance__c</fullName>
    <label>Alcance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Zonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>