force-app/main/default/objects/Campaing__c/fields/Campa_a_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Campa_a_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaña Id 18</label>
    <type>Text</type>
</CustomField>