force-app/main/default/objects/Campaing__c/fields/Demandante__c.field-meta.xml
<CustomField>
    <fullName>Demandante__c</fullName>
    <label>Demandante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>ORG</fullName>
            </value>
            <value>
                <fullName>VT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>