force-app/main/default/objects/Campaing__c/fields/ILG_OLG__c.field-meta.xml
<CustomField>
    <fullName>ILG_OLG__c</fullName>
    <label>ILG/OLG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILG</fullName>
            </value>
            <value>
                <fullName>OLG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>