force-app/main/default/objects/Campaing__c/fields/R_P__c.field-meta.xml
<CustomField>
    <fullName>R_P__c</fullName>
    <label>R/P</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>