force-app/main/default/objects/Campaing__c/fields/Subtipo_de_campaign__c.field-meta.xml
<CustomField>
    <fullName>Subtipo_de_campaign__c</fullName>
    <label>Subtipo de campaña</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_campaign__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Otros RRSS</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Linkedlin</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Web IB-Industria</fullName>
            </value>
            <value>
                <fullName>SW (HotLead, Varportal)</fullName>
            </value>
            <value>
                <fullName>Solucion</fullName>
            </value>
            <value>
                <fullName>Sectoriales</fullName>
            </value>
            <value>
                <fullName>Zonales (Polig.Ind.)</fullName>
            </value>
            <value>
                <fullName>Colaborador</fullName>
            </value>
            <value>
                <fullName>IB y Otras fuentes</fullName>
            </value>
            <value>
                <fullName>Petición Cliente</fullName>
            </value>
            <value>
                <fullName>AP&amp;C_Generacion</fullName>
            </value>
            <value>
                <fullName>AP&amp;C_Gestion</fullName>
            </value>
            <value>
                <fullName>Prensa (digital, escrita)</fullName>
            </value>
            <value>
                <fullName>Cumplimiento Agenda</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Plan de cuentas</fullName>
            </value>
            <value>
                <fullName>Actividad Propia</fullName>
            </value>
            <value>
                <fullName>Presentacion</fullName>
            </value>
            <value>
                <fullName>Webex Comercial</fullName>
            </value>
            <value>
                <fullName>Webex Tecnica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>