force-app/main/default/objects/Campaing__c/fields/Suma_Margen__c.field-meta.xml
<CustomField>
    <fullName>Suma_Margen__c</fullName>
    <label>Suma Margen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>