force-app/main/default/objects/Campaing__c/fields/Tipo_campaign__c.field-meta.xml
<CustomField>
    <fullName>Tipo_campaign__c</fullName>
    <label>Tipo campaña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaña Prospeccion</fullName>
            </value>
            <value>
                <fullName>Campaña Regular</fullName>
            </value>
            <value>
                <fullName>Campaña Digital</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>