force-app/main/default/objects/Campaing__c/recordTypes/Outbound_1_0.recordType-meta.xml
<RecordType>
    <fullName>Outbound_1_0</fullName>
    <active>true</active>
    <label>Outbound 1.0</label>
</RecordType>