force-app/main/default/objects/Campaing__c/recordTypes/Outbound_2_0.recordType-meta.xml
<RecordType>
    <fullName>Outbound_2_0</fullName>
    <active>true</active>
    <label>Outbound 2.0</label>
</RecordType>