force-app/main/default/objects/Campaing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_Inicio__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>