force-app/main/default/objects/Campaing__c/listViews/Mis_campaas.listView-meta.xml
<ListView>
    <fullName>Mis_campaas</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Mis campañas</label>
</ListView>